# plant-AI-preprocessing

./: CMakeLists.txt  chunk.cpp  chunk.hpp  go.sh  imageProcessor.cpp  imageProcessor.hpp  main.cpp
common/: do_args.cpp  do_args.hpp  hsv.cpp  hsv.hpp  jpeg.cpp  jpeg.hpp  png.cpp  png.hpp  pnm.cpp  pnm.hpp  readPng.cpp  utils.cpp  utils.hpp  writeJpeg.cpp
